--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -11,6 +11,7 @@
     <div class="top_wrapper">
         <label for="list_text">Введите текст</label>
         <textarea type="text" class="list_text" id="list_text"></textarea>
+        <label for="">Тег:</label>
         <select class="select" name="" id="">
             <option value="Дом">Дом</option>
             <option value="Работа">Работа</option>
@@ -19,8 +20,8 @@
         </select>
         <div class="btn list_add">Add</div>
         <div class="list_remove btn">Remove</div>
-
-        <select class="select_find" name="" id="">
+        <label for="">Сортировка:</label>
+        <select class="select_find" name="" id="select_find">
             <option value="Всё">Всё</option>
             <option value="Дом">Дом</option>
             <option value="Работа">Работа</option>
@@ -31,14 +32,14 @@
     </div>
 
     <div class="container">
-        <h1>To Do</h1>
-        <ul class="todo">
+        <h1>To Do:</h1>
+        <ol class="todo">
            
-        </ul>
-        <h1>Restore</h1>
-        <ul class="restore">
+        </ol>
+        <h1 class="restore_heading">Restore:</h1>
+        <ol class="restore">
 
-        </ul>
+        </ol>
     </div>
 
 
